--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -29,7 +29,7 @@ fade-exclude = [];
 
 opacity-rule = [
   "85:class_g = 'Rofi'",
-  #"90:class_g = 'Alacritty'"
+  "90:class_g = 'Alacritty'"
 ];
 
 
